--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <section class="hero">
       <div class="container">
          <h3 class="hero__suptitle">sup - Title</h3>
-         <h3 class="hero__title">Title - Trading company</h3>
+         <h3 class="hero__title">Create Your Own NFT Dream Gallery </h3>
          <div class="hero__subtitle">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</div>
          <button data-goto=".about" class="_button _button-white _button-center">Learn more</button>
       </div>
