--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
                      </li>
                   </ul>
                </div>
+
                <!-- Menu burger -->
                <button class="menu__icon icon-menu" type="button">
                   <span class="icon-menu__line"></span>
                </button>
             </nav>
+            
+            <!-- header button -->
+            <div class="_button _button-desctop">
+               <a data-goto="" href="#">Contact us</a>
+            </div>
          </div>
       </header>
       <!-- End Header Menu -->
@@ -60,7 +66,6 @@
    <!-- Hero section -->
    <section class="hero">
       <div class="container">
-         <h3 class="hero__suptitle">sup - Title</h3>
          <h3 class="hero__title">Create Your Own NFT Dream Gallery </h3>
          <div class="hero__subtitle">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</div>
          <button data-goto=".about" class="_button _button-white _button-center">Learn more</button>
