update header & added company logo

--- a/index.html
+++ b/index.html
@@ -66,29 +66,58 @@
    <!-- Hero section -->
    <section class="hero">
       <div class="container">
-         <h3 class="hero__title">Create Your Own NFT Dream Gallery </h3>
-         <div class="hero__subtitle">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</div>
-         <button data-goto=".about" class="_button _button-white _button-center">Learn more</button>
+         <div class="hero__content">
+            <!-- hero-left -->
+            <div class="hero__left">
+               <h3 class="hero__title">Create Your<br> Own <span class="hero__title-color">NFT Dream</span><br> Gallery </h3>
+               <div class="hero__container">
+                  <button data-goto=".about" class="_button-hero ">Discover NFT</button>
+                  <div class="hero__subtitle">The Larges NFT Marketplace. Automatic and truly unique digital creation. Signed and issued by the creator, made possible by blockchain technologi</div>
+               </div>
+               <div class="hero__numbers numbers">
+                  <div class="numbers__item">
+                     <div class="numbers__title">Artwork</div>
+                     <div class="numbers__number">25.1k</div>
+                  </div>
+                  <div class="numbers__item">
+                     <div class="numbers__title">Artist</div>
+                     <div class="numbers__number">15.6k</div>
+                  </div>
+                  <div class="numbers__item">
+                     <div class="numbers__title">Aucition</div>
+                     <div class="numbers__number">10.2k</div>
+                  </div>
+               </div>
+            </div>
+            <!-- hero-right -->
+            <div class="hero__right">
+               <div class="hero__images">
+                  <img src="./img/hero-img/image-1.png" alt="img" class="hero__img">
+               </div>
+            </div>
+         </div>
       </div>
    </section>
 
    <!-- Brands section-->
    <section class="brands">
       <div class="container">
-         <h3 class="_mb-25"><span class="_title">brands available</span> <span class="_subtitle">for purchase:</span></h3>
 
          <div class="brands__list">
             <div class="brands__item">
-               <img src="./img/brands1.png" alt="img" class="brands__img">
+               <img src="./img/company/Company-logo-1.svg" alt="img" class="brands__img">
             </div>
             <div class="brands__item">
-               <img src="./img/brands2.png" alt="img" class="brands__img">
+               <img src="./img/company/Company-logo-2.svg" alt="img" class="brands__img">
             </div>
             <div class="brands__item">
-               <img src="./img/brands3.png" alt="img" class="brands__img">
+               <img src="./img/company/Company-logo-3.svg" alt="img" class="brands__img">
             </div>
             <div class="brands__item">
-               <img src="./img/brands4.png" alt="img" class="brands__img">
+               <img src="./img/company/Company-logo-4.svg" alt="img" class="brands__img">
+            </div>
+            <div class="brands__item">
+               <img src="./img/company/Company-logo-5.svg" alt="img" class="brands__img">
             </div>
          </div>
       </div>
